# libxsmm

./: CMakeLists.txt
include/: libxsmm_macros.h
src/: CMakeLists.txt  lib_utils.h  libxsmm_main.c  libxsmm_plugins.c  libxsmm_plugins.h
